# tonalli

./: Cargo.toml  README.md
src/: main.rs
src/agents/: gemini.rs  mod.rs  ollama.rs
src/tui/: app.rs  mod.rs  ui.rs
