[package]
name = "tonalli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
crossterm = { version = "0.28", features = ["event-stream"] }
dotenvy = "0.15.7"
futures-util = "0.3"
ratatui = "0.29"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
